tests/paczka1/small_fuzzy/16382744.err
Error in line 1: DXfiNIkpx S598 56,1
Error in line 2: v0JgU S598 9,7
